<?xml version="1.0" encoding="utf-8"?>
<!-- FIX 2.4: Updated to 4 tabs as per requirement:
     Trang chủ / Khóa học / Từ vựng / Cá nhân -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@android:drawable/ic_menu_today"/>
    <item
        android:id="@+id/nav_courses"
        android:title="@string/courses"
        android:icon="@android:drawable/ic_menu_agenda"/>
    <item
        android:id="@+id/nav_vocabulary"
        android:title="@string/vocabulary"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@android:drawable/ic_menu_myplaces"/>
</menu>
